force-app/main/default/staticresources/python/Disappear/src/objects/pubAuthor__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details_For_Approval__c</fullName>
        <label>Additional Details (For Approval)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_For_Draft_Share__c</fullName>
        <description>Stores additional details sent with Draft-Share email</description>
        <label>Additional Details (For Draft Share)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details (For Invite)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Addl_Details_for_Reminder__c</fullName>
        <label>Addl Details for Reminder</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalAcceptedDate__c</fullName>
        <description>The date the Approval Notice has been accepted</description>
        <label>Approval Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalSentDate__c</fullName>
        <description>The date the Approval notice has been sent out</description>
        <label>Approval Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Disclaimer_ID__c</fullName>
        <description>Contains the ID of the approval disclaimer used</description>
        <label>Approval Disclaimer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Rejected_Date__c</fullName>
        <description>Field holds the Approval Rejected Date by an Author or Core User</description>
        <label>Approval Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AuthorCountry__c</fullName>
        <formula>TEXT(Author__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorOrder__c</fullName>
        <label>Author Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuthorStatus__c</fullName>
        <label>AuthorStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Invite Delivery</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Invite Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Review by Authors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Author Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Author Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Author_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author Address</label>
        <referenceTo>Contact_Address__c</referenceTo>
        <relationshipLabel>Publication Authors</relationshipLabel>
        <relationshipName>Publication_Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication Authors</relationshipLabel>
        <relationshipName>Publication_Authors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_Date_Time__c</fullName>
        <label>Please respond by (For Invite)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommentReceivedDate__c</fullName>
        <description>Stores the author comment received date</description>
        <label>CommentReceivedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disclaimer_ID__c</fullName>
        <description>Contains the ID of the invite disclaimer used</description>
        <label>Invite Disclaimer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraftShareDate__c</fullName>
        <description>The date on which Draft Share email was sent</description>
        <label>Draft Share Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrantDraftAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to grant access to the latest draft document related to this publication</description>
        <inlineHelpText>Grant access to the latest draft document related to this publication</inlineHelpText>
        <label>Grant Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InviteAcceptedDate__c</fullName>
        <description>The date when the Author  has accepted the Invitation</description>
        <label>Invite Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InviteSentDate__c</fullName>
        <description>The date the Invitation was sent out.</description>
        <label>Invite Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invite_Rejected_Date__c</fullName>
        <label>Invite Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for UI Operation only - do not store or migrate data to this field</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_for_Approval__c</fullName>
        <label>Justification for Approval/Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Email Confirmation of Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Response from Author’s Delegate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Justification_for_invite__c</fullName>
        <label>Justification for invite</label>
        <picklist>
            <picklistValues>
                <fullName>Email Confirmation of Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from Author</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>On_behalf_of_for_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On behalf of (for Approval)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Publication_Authors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_behalf_of_for_Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On behalf of (for Invite)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Publication_Authors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_respond_by_For_Approval__c</fullName>
        <label>Please respond by (For Approval)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Please_respond_by_For_Draft_Share__c</fullName>
        <description>Stores Draft Share Due Date</description>
        <label>Please respond by (For Draft Share)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Authors</relationshipLabel>
        <relationshipName>Publication_Authors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <picklist>
            <picklistValues>
                <fullName>Conception and design of Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient data collection/Data acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis and interpretation of data</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ReasonToDeclineApproval__c</fullName>
        <description>Reason to decline approval</description>
        <inlineHelpText>Reason to decline approval</inlineHelpText>
        <label>Reason to Decline Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Investigator_PI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Investigator (PI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for logical deletion or soft deletion of Pub Authors.</description>
        <label>isLogicallyDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Author</label>
    <listViews>
        <fullName>Approval_View</fullName>
        <columns>Publication__c</columns>
        <columns>Author__c</columns>
        <columns>AuthorOrder__c</columns>
        <columns>AuthorStatus__c</columns>
        <columns>Please_respond_by_For_Approval__c</columns>
        <columns>Additional_Details_For_Approval__c</columns>
        <columns>ApprovalAcceptedDate__c</columns>
        <columns>Approval_Disclaimer_ID__c</columns>
        <columns>ApprovalSentDate__c</columns>
        <columns>ReasonToDeclineApproval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-068841</value>
        </filters>
        <label>Approval View</label>
    </listViews>
    <listViews>
        <fullName>Invite_View</fullName>
        <columns>Publication__c</columns>
        <columns>Author__c</columns>
        <columns>AuthorOrder__c</columns>
        <columns>AuthorStatus__c</columns>
        <columns>InviteAcceptedDate__c</columns>
        <columns>InviteSentDate__c</columns>
        <columns>Disclaimer_ID__c</columns>
        <columns>Additional_Details__c</columns>
        <columns>By_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-071833</value>
        </filters>
        <label>Invite View</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Publication Author Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>